fixing horizontal positioning of tooltip when term wraps; making tooltip visible outside of dialog

--- a/styles.css
+++ b/styles.css
@@ -434,6 +434,7 @@ header h1 {
   padding: 0;
   max-width: 600px;
   width: 90%;
+  overflow: visible;
 }
 
 #get-started-dialog::backdrop {
